packages/graphql-typescript-definitions/test/__snapshots__/cli.test.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cli fails when there are syntax errors 1`] = `
Object {
  "error": Object {
    "cmd": "packages/graphql-typescript-definitions/bin/graphql-typescript-definitions 'packages/graphql-typescript-definitions/test/fixtures/malformed-query/documents/**/*.graphql' --schema-path 'packages/graphql-typescript-definitions/test/fixtures/malformed-query/schema.json'",
    "code": 1,
    "killed": false,
    "signal": null,
  },
  "stderr": "",
  "stdout": " ERROR  Syntax Error packages/graphql-typescript-definitions/test/fixtures/malformed-query/documents/Fragment.graphql (2:3) Expected {, found Name \\"name\\"

1: fragment PersonFields on Person
2:   name
     ^
3:   relatives {

GraphQLError: Syntax Error packages/graphql-typescript-definitions/test/fixtures/malformed-query/documents/Fragment.graphql (2:3) Expected {, found Name \\"name\\"

1: fragment PersonFields on Person
2:   name
     ^
3:   relatives {

    at syntaxError (node_modules/graphql/error/syntaxError.js:28:15)
    at expect (node_modules/graphql/language/parser.js:969:32)
    at many (node_modules/graphql/language/parser.js:1017:3)
    at parseSelectionSet (node_modules/graphql/language/parser.js:253:17)
    at parseFragmentDefinition (node_modules/graphql/language/parser.js:366:19)
    at parseDefinition (node_modules/graphql/language/parser.js:139:16)
    at parseDocument (node_modules/graphql/language/parser.js:109:22)
    at Object.parse (node_modules/graphql/language/parser.js:46:10)
    at Builder.<anonymous> (packages/graphql-typescript-definitions/lib/index.js:164:40)
    at Generator.next (<anonymous>)

",
}
`;

exports[`cli fails when there are syntax errors 2`] = `
Object {
  "error": Object {
    "cmd": "packages/graphql-typescript-definitions/bin/graphql-typescript-definitions 'packages/graphql-typescript-definitions/test/fixtures/missing-schema/documents/**/*.graphql' --schema-path 'packages/graphql-typescript-definitions/test/fixtures/missing-schema/schema.json'",
    "code": 1,
    "killed": false,
    "signal": null,
  },
  "stderr": "",
  "stdout": " ERROR  Error parsing 'packages/graphql-typescript-definitions/test/fixtures/missing-schema/schema.json':

ENOENT: no such file or directory, open 'packages/graphql-typescript-definitions/test/fixtures/missing-schema/schema.json'
Error: Error parsing 'packages/graphql-typescript-definitions/test/fixtures/missing-schema/schema.json':

ENOENT: no such file or directory, open 'packages/graphql-typescript-definitions/test/fixtures/missing-schema/schema.json'
    at Builder.<anonymous> (packages/graphql-typescript-definitions/lib/index.js:153:36)
    at Generator.throw (<anonymous>)
    at rejected (packages/graphql-typescript-definitions/lib/index.js:5:65)

",
}
`;

exports[`cli fails when there are unused types 1`] = `
Object {
  "error": Object {
    "cmd": "packages/graphql-typescript-definitions/bin/graphql-typescript-definitions 'packages/graphql-typescript-definitions/test/fixtures/missing-types/documents/**/*.graphql' --schema-path 'packages/graphql-typescript-definitions/test/fixtures/missing-types/schema.json'",
    "code": 1,
    "killed": false,
    "signal": null,
  },
  "stderr": "",
  "stdout": "
 ERROR  Error in packages/graphql-typescript-definitions/test/fixtures/missing-types/documents/Query.graphql: an invalid type was provided for key 'role'. This probably means there is a typo in your document or that one of your input types has been renamed.
Error: Error in packages/graphql-typescript-definitions/test/fixtures/missing-types/documents/Query.graphql: an invalid type was provided for key 'role'. This probably means there is a typo in your document or that one of your input types has been renamed.
    at Builder.<anonymous> (packages/graphql-typescript-definitions/lib/index.js:123:39)
    at Generator.next (<anonymous>)
    at packages/graphql-typescript-definitions/lib/index.js:7:71
    at __awaiter (packages/graphql-typescript-definitions/lib/index.js:3:12)
    at Promise.all.Object.keys.map (packages/graphql-typescript-definitions/lib/index.js:116:35)
    at Array.map (native)
    at Builder.<anonymous> (packages/graphql-typescript-definitions/lib/index.js:116:22)
    at Generator.next (<anonymous>)
    at packages/graphql-typescript-definitions/lib/index.js:7:71
    at __awaiter (packages/graphql-typescript-definitions/lib/index.js:3:12)

",
}
`;

exports[`cli succeeds when there are no fixture errors 1`] = `
Object {
  "error": null,
  "stderr": "",
  "stdout": "
 BUILT  packages/graphql-typescript-definitions/test/fixtures/all-clear/documents/Query.graphql → packages/graphql-typescript-definitions/test/fixtures/all-clear/documents/Query.graphql.d.ts
 BUILT  packages/graphql-typescript-definitions/test/fixtures/all-clear/documents/Fragment.graphql → packages/graphql-typescript-definitions/test/fixtures/all-clear/documents/Fragment.graphql.d.ts
",
}
`;
